re PR lto/52605 (LTO -g ICE when looking up context of VMTs of classes defined within functions)

2012-05-02  Martin Jambor  <mjambor@suse.cz>

	PR lto/52605
	* dwarf2out.c (dwarf2out_decl): Only lookup die representing context
	of a variable when the contect is a function.

	* gcc/testsuite/g++.dg/lto/pr52605_0.C: New test.

From-SVN: r187063